Overflow bug fixed, order implementation started

--- a/src/main/web/strings-and-winds-react/src/index.css
+++ b/src/main/web/strings-and-winds-react/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.hideScrollBar{
+    overflow: hidden;
+}
+
+
 /* Change Autocomplete styles in Chrome */
 
 /*noinspection CssInvalidPropertyValue*/
